<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivityFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignEnd="@+id/tableLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:text="@string/current_location"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:text="@string/current_date"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/imageView"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:layout_row="4"
        android:layout_column="2"
        android:background="#dd325b68"
        android:textColor="#FFF"
        android:id="@+id/tableLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:id="@+id/row">

            <TextView
                android:id="@+id/dew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="5dp"
                android:text="@string/weather_description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/windspeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="5dp"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14dp" />
        </TableRow>

        <TableRow
            style="bold"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/humid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="5dp"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/gusts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="5dp"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="5dp"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14dp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/high"
        android:id="@+id/textView"
        android:layout_above="@+id/editText"
        android:layout_marginLeft="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/low"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/textView"
        android:layout_marginLeft="250dp" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:text="@string/AM"
        android:background="#ff4b6f7a"
        android:layout_alignTop="@+id/editText2"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:text="@string/PM"
        android:layout_above="@+id/tableLayout"
        android:layout_alignParentEnd="true"
        android:background="#648c8c8c" />

</RelativeLayout>
