<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Weather">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.03"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/currentLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/current_location"
                    android:textSize="12dp" />
                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" "
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/currentTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/current_time"
                    android:textSize="12dp" />
                <TextView
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" "
                    android:textSize="12dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/picture"
                android:layout_width="201dp"
                android:layout_height="141dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.12" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/currentConditionsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/current_weather"
                    android:textSize="14dp" />
                <TextView
                    android:id="@+id/conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text=" "
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1">

            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_weight="1.18">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/temperatureLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_marginTop="5dp"
                        android:text="@string/temperature"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/visLabel"
                        style="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_marginLeft="70dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/visibility"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                </TableRow>

                <TableRow
                    android:id="@+id/visibility"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_marginTop="5dp"
                        android:text=" "
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginLeft="70dp"
                        android:layout_marginTop="5dp"
                        android:text=" "
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14dp" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/dewLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_marginTop="5dp"
                        android:text="@string/dew_point_temp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/windspeedLabel"
                        style="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginLeft="70dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/wind_speeds"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/dew"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_marginTop="5dp"
                        android:text=" "
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/windspeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginLeft="70dp"
                        android:layout_marginTop="5dp"
                        android:text=" "
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14dp" />
                </TableRow>

                <TableRow
                    style="bold"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/humidLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_marginTop="5dp"
                        android:text="@string/humidity"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/gustsLabel"
                        style="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginLeft="70dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/gusts"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/humid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_marginTop="5dp"
                        android:text=" "
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/gusts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginLeft="70dp"
                        android:layout_marginTop="5dp"
                        android:text=" "
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14dp" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/pressureLabel"
                        style="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_marginTop="5dp"
                        android:text="@string/pressure"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_marginTop="5dp"
                        android:text=" "
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14dp" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
